<resources>
    <string name="app_name">Learning Kids</string>
    <string name="home"> Home</string>
    <string name="favourites"> Favourites</string>
    <string name="videos"> Videos</string>
    <string name="settings"> Settings</string>
    <string name="categories"> Categories</string>
    <string name="sign_in"> Sign In</string>
    <string name="sign_up"> Sign Up</string>
    <string name="child_name"> Child\'s name</string>
    <string name="name"> Kanyinsola</string>
    <string name="pin"> Pin</string>
    <string name="email"> Email</string>
    <string name="hint_email"> kayinsola@gmail.com</string>
    <string name="general"> General</string>
    <string name="notification"> Notifications</string>
    <string name="dark_mode"> Dark Mode</string>
    <string name="about"> About</string>
    <string name="terms"> Terms and Conditions</string>
    <string name="forgot_pass"> Forgot Pin?</string>
    <string name="google_register"> Sign In with Google</string>
    <string name="apple_register"> Sign In with Apple</string>
    <string name="help"> Help </string>
    <string name="log_out"> Log Out</string>
    <string name="hint_input_age"> Input your </string>
    <string name="child_age"> Child\'s name </string>
    <string name="confirm_pin"> Confirm Pin </string>
    <string name="submit"> Submit</string>
    <string name="hint_age"> Child\'s age</string>
    <string name="recover_password"> Recover Password</string>
</resources>