<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_icon"/>

    <item
        android:id="@+id/nav_category"
        android:title="@string/categories"
        android:icon="@drawable/ic_category"/>

    <item
        android:id="@+id/nav_videos"
        android:title="@string/videos"
        android:icon="@drawable/play_button"/>

    <item
        android:id="@+id/nav_favourites"
        android:title="@string/favourites"
        android:icon="@drawable/ic_favourite_icon"/>

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"/>

</menu>