<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1FA7EF"
    tools:context=".SignIn">

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="25dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/email"
        android:background="@drawable/white_background"
        android:textSize="15sp"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/edit_pin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:inputType="number"
        android:layout_marginEnd="25dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/pin"
        android:background="@drawable/white_background"
        android:textSize="15sp"
        android:padding="15dp"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_pin"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/sign_up_background"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/submit"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/forgot_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit_button"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#FF4F9A"
        android:text="@string/forgot_pass"/>

    <Button
        android:id="@+id/google_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/forgot_pin"
        android:layout_marginTop="20dp"
        android:background="@drawable/google_background"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/google_register"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/google_icon"
        android:paddingLeft="25dp"/>

    <Button
        android:id="@+id/apple_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/google_button"
        android:layout_marginTop="20dp"
        android:background="@drawable/apple_background"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/apple_register"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/apple_icon"
        android:paddingLeft="25dp"/>









</androidx.constraintlayout.widget.ConstraintLayout>