<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1FA7EF"
    tools:context=".RecoverPassword">

    <ImageView
        android:id="@+id/two_kids"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/two_kids_icon"/>

    <TextView
        android:id="@+id/recoverPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/recover_password"/>


    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recoverPassword"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="25dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/email"
        android:background="@drawable/white_background"
        android:textSize="15sp"
        android:padding="15dp"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/sign_up_background"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/submit"
        android:textAllCaps="false"/>





</androidx.constraintlayout.widget.ConstraintLayout>