<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baby_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        app:civ_border_color="#4E4343"
        app:civ_border_width="1dp"/>

    <TextView
        android:id="@+id/child_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_pic"
        android:layout_marginStart="25dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/child_name"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_height="50dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/child_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="25dp"
        android:id="@+id/edit_name"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edit_background"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:hint="@string/name"
        android:paddingStart="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/pin"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_height="50dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="25dp"
        android:id="@+id/edit_pin"
        android:layout_marginEnd="25dp"
        android:background="@drawable/sign_in_background"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textColorHint="@color/white"
        android:inputType="numberPassword"
        android:paddingStart="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_pin"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/email"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_height="50dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="25dp"
        android:id="@+id/edit_email"
        android:layout_marginEnd="25dp"
        android:background="@drawable/sign_up_background"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:hint="@string/hint_email"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/general"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/notification_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/notification_background"
        app:layout_constraintTop_toBottomOf="@id/general">

        <ImageView
            android:id="@+id/notify_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:src="@drawable/notify_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/notify_icon"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:text="@string/notification"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dark_mood_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_layout"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/dark_mode_background">

        <ImageView
            android:id="@+id/dark_mode_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:src="@drawable/dark_mode_icon"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dark_mode_icon"
            android:layout_marginStart="12dp"
            android:text="@string/dark_mode"
            app:switchPadding="120dp"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:outlineAmbientShadowColor="#32D74B"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/terms_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/terms_background"
        app:layout_constraintTop_toBottomOf="@id/dark_mood_layout">

        <ImageView
            android:id="@+id/conditions_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:src="@drawable/terms_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/conditions_icon"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:text="@string/terms"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/help_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/help_background"
        app:layout_constraintTop_toBottomOf="@id/terms_layout">

        <ImageView
            android:id="@+id/help_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:src="@drawable/help_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/help_icon"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:text="@string/help"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/about_background"
        app:layout_constraintTop_toBottomOf="@id/help_layout">

        <ImageView
            android:id="@+id/about_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:src="@drawable/about_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/about_icon"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:text="@string/about"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/logOut_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/log_out_background"
        app:layout_constraintTop_toBottomOf="@id/about_layout">

        <ImageView
            android:id="@+id/logOut_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:src="@drawable/about_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/logOut_icon"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:text="@string/log_out"/>

    </RelativeLayout>










</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>